[AURA-26](feat): add update petition endpoint (#24)
* docs: add docs for update petition endpoint

* feat: add update petition endpoint
